manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "prod03aks-919c"
    labels:
        app: "prod03aks-919c"
spec:
    type: ClusterIP
    ports:
    - port: 9555
      targetPort: 9555
      protocol: TCP
      name: http
    selector:
        app: "prod03aks-919c"
